fix: header spacing and font

--- a/blocks/body.css
+++ b/blocks/body.css
@@ -2,6 +2,9 @@
     max-width: 1280px;
     margin: 0 auto;
     background-color: #000;
+    font-family: "Inter", Arial, sans-serif;
+    font-size: 18px;
+    font-weight: normal;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
     -webkit-text-size-adjust: 100%;
